--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,22 @@
 % Common project erlang options.
 {erl_opts, [
+    % mandatory
     debug_info,
     warnings_as_errors,
+    warn_export_all,
+    warn_missing_spec,
+    warn_untyped_record,
     warn_export_vars,
+
+    % by default
+    warn_unused_record,
+    warn_bif_clash,
+    warn_obsolete_guard,
+    warn_unused_vars,
     warn_shadow_vars,
-    warn_obsolete_guard
+    warn_unused_import,
+    warn_unused_function,
+    warn_deprecated_function
 ]}.
 
 % Common project dependencies.
@@ -16,9 +28,9 @@
 {xref_checks, [
     undefined_function_calls,
     undefined_functions,
-    % locals_not_used,
     deprecated_functions_calls,
-    deprecated_functions
+    deprecated_functions,
+    locals_not_used
 ]}.
 
 {dialyzer, [
@@ -26,7 +38,6 @@
         unmatched_returns,
         error_handling,
         race_conditions,
-        %underspecs,
         unknown
     ]},
     {plt_apps, all_deps}
