updated woody branch, bumped build_image and utils

--- a/rebar.config
+++ b/rebar.config
@@ -21,7 +21,7 @@
 
 % Common project dependencies.
 {deps, [
-    {woody, ".*", {git,"git@github.com:rbkmoney/woody_erlang.git",{branch, "epic/erlang-21"}}},
+    {woody, ".*", {git,"git@github.com:rbkmoney/woody_erlang.git",{branch, "master"}}},
     {genlib, {git, "https://github.com/rbkmoney/genlib.git", {branch, "master"}}}
 ]}.
 
