--- a/rebar.config
+++ b/rebar.config
@@ -42,3 +42,12 @@
     ]},
     {plt_apps, all_deps}
 ]}.
+
+{plugins, [
+    {erlfmt, "0.8.0"}
+]}.
+
+{erlfmt, [
+    {print_width, 120},
+    {files, "{src,include,test}/*.{hrl,erl}"}
+]}.
